src/test/deca/codegen/invalid/resultats/printdivfloat0-ima.res
Erreur : Une operation a depasse la capacite maximale des flottants.
